fix(settings): show correct version and website link
- Update website link to jsattler.github.io/BetterCapture
- Use full version number for MARKETING_VERSION in CI
- Use short git SHA for build number in CI

Closes #46

--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -73,10 +73,9 @@ jobs:
       - name: Update version in project
         run: |
           VERSION=${{ steps.version.outputs.version }}
-          # Extract major.minor for MARKETING_VERSION (strip pre-release suffix)
-          MARKETING_VERSION=$(echo "$VERSION" | grep -oE '^[0-9]+\.[0-9]+')
-          agvtool new-marketing-version "$MARKETING_VERSION"
-          agvtool new-version -all 1
+          SHORT_SHA=$(git rev-parse --short HEAD)
+          agvtool new-marketing-version "$VERSION"
+          agvtool new-version -all "$SHORT_SHA"
 
       - name: Build application
         run: |
