--- a/BetterCapture/BetterCapture.entitlements
+++ b/BetterCapture/BetterCapture.entitlements
@@ -12,6 +12,8 @@
 	<true/>
 	<key>com.apple.security.device.audio-input</key>
 	<true/>
+	<key>com.apple.security.device.camera</key>
+	<true/>
 	<key>com.apple.security.network.client</key>
 	<true/>
 	<key>com.apple.security.temporary-exception.mach-lookup.global-name</key>
