--- a/.github/DISCUSSION_TEMPLATE/bug-reports.yml
+++ b/.github/DISCUSSION_TEMPLATE/bug-reports.yml
@@ -10,15 +10,11 @@ body:
     attributes:
       value: "# Bug Report"
 
-  - type: dropdown
+  - type: input
     attributes:
       label: Version
       description: What version of BetterCapture are you running? You can find this in Settings > General.
-      options:
-        - v2026.1.3
-        - v2026.1.2
-        - v2026.1.1
-        - v2026.1.0
+      placeholder: "v2026.2"
     validations:
       required: true
 
